package lab1.task3.domain.command;

public enum AttemptResult {
  SUCCESS, FAILURE;
}