package lab1.task3.domain.equipment;

public interface PhysicalObject {
  int getWeightKg();

  String getName();
}
